fixed spacing issue on sections when clicking nav bar

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,3 +1,7 @@
+h5 {
+    padding-top: 10vh;
+}
+
 .about-container {
     display: grid;
     grid-template-columns: 25% 50%;
